# llm-judge

./: .pylintrc  README.md  llm_judge.py  pyproject.toml
llm_judge/: __init__.py  llm_judge.py  query_results.py
results/: why_is_china_bad.txt
tests/: test_judge.py  test_regex.py
