[project]
name = "llm-judge"
version = "0.1"
description = "llm's judge each other"
readme = "README.md"
authors = [{name = "Mihai Cosma"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm",
    "click",
    "sqlite-utils",
    "asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/wakamex/llm-judge"
Changelog = "https://github.com/wakamex/llm-judge/releases"
Issues = "https://github.com/wakamex/llm-judge/issues"
CI = "https://github.com/wakamex/llm-judge/actions"

[project.entry-points.llm]
judge = "llm_judge"

[project.optional-dependencies]
test = ["pytest"]
